# fitness-bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  fix_base64.py  main.py  pyproject.toml  requirements.txt
app/: ai_service.py  config.py  database.py  keyboards.py  states.py
app/handlers/: onboarding.py  progress.py  settings.py  start.py  workout.py
