[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitness-bot"
version = "0.1.0"
description = "AI-powered fitness Telegram bot with workout planning and diary"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.7.0",
    "anthropic>=0.25.0",
    "supabase>=2.4.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
